--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ h1 {
   color: #fff;
   font-family: 'Lobster', cursive;
 }
+.lobster {
+    font-family: 'Lobster', cursive, sans-serif;
+}
 a {
 font-family: 'Roboto', sans-serif;
 color:  #111;
