--- a/style.css
+++ b/style.css
@@ -7,8 +7,49 @@ body {
   background-image: url("./background.jpg");
   background-size: 1920px 1080px
 }
+div {
+  width:98%;
+  right: 3px;
+  left: 3px;
+}
+/*collapsible code*/
+.collapsible {
+  background-color: #557769;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 18px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  float:bottom;
+}
+.active, .collapsible:hover {
+  background-color: #446666;
+}
+.content {
+  width:100%;
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #557769;
+    float: right, bottom;
+}
+.collapsible:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: white;
+    float: Left;
+    margin-left: 5px;
+}
 
-
+.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+/*end of collapsible*/
 h2 {
   font-family: 'Roboto', sans-serif;
   color: #DCDCDC;
