--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   background-image: linear-gradient(to right, #240000 92%, #baa);
   background-size: 100% 100%;
   left-margin: 4px;
+  width: 100%;
+  height: 100%;
 }
 head {
 border-bottom: 2px solid red;
