--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ margin-left: 5px;
   left:0%;
   top: 0%;
 }
-.button {
+.body button {
     font-family: 'Ubuntu Mono';
     font-size: 25px;
     display: inline-block;
@@ -58,7 +58,7 @@ margin-left: 5px;
     background:  #100040;
     padding: 10px 18px;
     margin: 0.5%;
-    width:46%;
+    width:45%;
     color: #ffffff;
     text-decoration: none;
     box-shadow: 4px 3px;
