--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ margin-left: 5px;
   left:0%;
   top: 0%;
 }
-.body button {
+.button {
     font-family: 'Ubuntu Mono';
     font-size: 25px;
     display: inline-block;
