--- a/style.css
+++ b/style.css
@@ -6,12 +6,9 @@ body {
   width: 100%;
   height: 100%;
 }
-head {
-border-bottom: 2px solid red;
-}
 .imgbanner {
 margin:0;
-width:101%;
+max-width:100%;
 }
 marquee {
 	font-size: 20px;
@@ -37,6 +34,7 @@ subtitle {
 .advert{
 max-width:33%;
 margin-left: 5px;
+display: inline-block;
 }
 .box {
   border: 1px solid white;
@@ -57,8 +55,6 @@ margin-left: 5px;
     margin: 0.5%;
     width:45%;
     color: #ffffff;
-    text-decoration: none;
-    box-shadow: 4px 3px;
 }
 
 [id^=modal] {
