--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@ body {
   background-image: linear-gradient(to right, #240000 92%, #baa);
   background-size: 100% 100%;
   margin-left: 4px;
-  width: 100%;
-  height: 100%;
+  width: 99%;
+  height: 99%;
+}
+head{
+  max-width: 100%;
+  position:fixed;
 }
 .imgbanner {
-margin:0;
-max-width:99%;
+margin-left:0;
+max-width:100%;
 }
 h1 {
 font-family: 'Ubuntu Mono', sans-serif;
