--- a/style.css
+++ b/style.css
@@ -1,18 +1,7 @@
 body {
   margin: 0;
-  background-image: linear-gradient(to right, #000000 92%, rgb(133, 239, 255));
-  background-size: 100% 100%;
+  background-color: black;
   margin-left: 4px;
-  width: 99%;
-  height: 99%;
-}
-head{
-  max-width: 100%;
-  position:fixed;
-}
-.imgbanner {
-margin:0;
-width:100%;
 }
 h1, h2 {
 font-family: 'Ubuntu Mono', sans-serif;
@@ -46,13 +35,13 @@ display: inline-block;
 }
 .button {
     font-family: 'Ubuntu Mono';
-    font-size: 25px;
+    font-size: 1.5rem;
     display: inline-block;
     border: 2px solid rgb(0, 255, 21);
     background:  #090024;
-    padding: 10px 18px;
+    padding: 1% 1%;
     margin: 0.5%;
-    width:45%;
+    max-width:42%;
     color: #ffffff;
 }
 
@@ -114,19 +103,21 @@ input[type=checkbox] {
   background-image: linear-gradient(180deg, #100030 0.001%, #100040);
   overflow: hidden;
   position: fixed;
-  bottom: 0%;
+  top: 0%;
   left: 0%;
   width: 100%;
+}
+.navbar h1 {
+  justify-content: right;
+  display:flex;
 }
 /* Style the links inside the navigation bar */
 .navbar a {
   font-family: 'Ubuntu Mono';
-  float: left;
-  display: block;
   color: #f2f2f2;
-  padding: 0.6% 0.3%;
+  padding: 0.6%;
   text-decoration: none;
-  font-size: 21px;
+  font-size: 24px;
   border-right: 2px solid white;
 }
 .content a {
