--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ subtitle {
  color: #eee
 }
 .advert{
-max-width:33%;
+max-width:35%;
 margin-left: 5px;
 display: inline-block;
 }
@@ -35,7 +35,7 @@ display: inline-block;
 }
 .button {
     font-family: 'Ubuntu Mono';
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     display: inline-block;
     border: 2px solid rgb(0, 255, 21);
     background:  #090024;
@@ -44,7 +44,11 @@ display: inline-block;
     max-width:42%;
     color: #ffffff;
 }
-
+.contentbar {
+  max-height: 40%;
+  max-width: 300%;
+  display: block;
+}
 [id^=modal] {
     display: none;
     position: fixed;
@@ -98,7 +102,7 @@ input[type=checkbox] {
 .navbar a:hover, .navbar a:focus {
   background-color: rgb(0, 187, 0);
 }
-/* Place the navbar at the bottom of the page, and make it stick */
+/* Place the navbar at the top of the page, and make it stick */
 .navbar {
   background-image: linear-gradient(180deg, #100030 0.001%, #100040);
   overflow: hidden;
@@ -109,7 +113,11 @@ input[type=checkbox] {
 }
 .navbar h1 {
   justify-content: right;
-  display:flex;
+  top:0;
+  right:0%;
+  display:inline;
+  font-size: 2.2rem;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 /* Style the links inside the navigation bar */
 .navbar a {
@@ -117,8 +125,9 @@ input[type=checkbox] {
   color: #f2f2f2;
   padding: 0.6%;
   text-decoration: none;
-  font-size: 24px;
-  border-right: 2px solid white;
+  font-size: 2rem;
+  border-right: 2px solid rgb(0, 255, 21);
+  display: inline;
 }
 .content a {
   display: inline-block;
