--- a/style.css
+++ b/style.css
@@ -3,25 +3,19 @@ body {
   background-color: black;
   margin-left: 4px;
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
 font-family: 'Ubuntu Mono', sans-serif;
   color: #fff;
 margin-left: 0.4%;
 }
-p {
-  font-family: 'Ubuntu Mono';
-  padding: 5px;
-  color: #fff;
-  font-size: 18px;
-}
 subtitle {
  font-size: 15px;
  font-family: 'Ubuntu Mono';
- color: #eee
+ color: #b1b1b1;
 }
 .advert{
 max-width:35%;
-margin-left: 5px;
+margin: 0.8rem;
 display: inline-block;
 }
 .box {
@@ -36,18 +30,21 @@ display: inline-block;
 .button {
     font-family: 'Ubuntu Mono';
     font-size: 1.4rem;
-    display: inline-block;
+    display: flex;
     border: 2px solid rgb(0, 255, 21);
     background:  #090024;
     padding: 1% 1%;
     margin: 0.5%;
-    max-width:42%;
+    min-width: fit-content;
     color: #ffffff;
+    align-items: center;
 }
 .contentbar {
   max-height: 40%;
-  max-width: 300%;
-  display: block;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-flow: row-reverse wrap-reverse;
+  justify-content: left;
 }
 [id^=modal] {
     display: none;
@@ -129,13 +126,19 @@ input[type=checkbox] {
   border-right: 2px solid rgb(0, 255, 21);
   display: inline;
 }
-.content a {
-  display: inline-block;
-  color: #f2c2c2;
-  text-decoration: none;
-}
 .popup a {
 color: white;
 text-decoration: none;
 font-size: 24px;
+}
+@media (max-width: 1100px) {
+  subtitle{
+    display:none;
+  }
+  button{
+    max-width: 48%;
+  }
+  .contentbar{
+    flex-flow:row-reverse wrap;
+  }
 }
