--- a/fixlist/style.css
+++ b/fixlist/style.css
@@ -105,6 +105,7 @@ input[type=checkbox] {
   top: 0%;
   left: 0%;
   width: 100%;
+  font-size: 100%;
 }
 .navbar h1 {
   justify-content: right;
@@ -113,28 +114,39 @@ input[type=checkbox] {
   display:inline;
   font-size: 2.2rem;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  display:none;
 }
 /* Style the links inside the navigation bar */
-.navbar a {
+.navbar>a {
   font-family: 'Ubuntu Mono';
   color: #f2f2f2;
   padding: 0.6%;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 200%;
   border-right: 2px solid rgb(0, 255, 21);
   display: inline;
+}
+#return{
+  position:absolute;
+  right:0.2rem;
+  font-size: 1.3rem;
+  border-right: 0px transparent;
+}
+#return:focus, #return:hover{
+  background-color: #B00;
 }
 .popup a {
 color: white;
 text-decoration: none;
 font-size: 24px;
 }
-@media (max-width: 1100px) {
+@media (max-width: 950px) {
   subtitle{
     display:none;
   }
-  button{
-    max-width: 48%;
+  .button{
+    align-self: center;
+    width: 80%;
   }
   .contentbar{
     flex-flow:row-reverse wrap;
