--- a/index.css
+++ b/index.css
@@ -31,3 +31,21 @@ h1, h2, h3, h4, h5, h6, p {
   .navbar a:hover, .navbar a:focus {
     background-color: rgb(245, 130, 195);
   }
+  @media (max-width: 1100px) {
+    button{
+      max-width: 48%;
+    }
+    .contentbar{
+      flex-flow:row-reverse wrap;
+        max-width: 90%;
+        padding-bottom: 1rem;
+        display: flex;
+        flex-flow: column-reverse wrap;
+        align-content: center;
+        flex-shrink: 1;
+    }
+    .advert{
+      max-width:85%;
+      margin: 0.5rem;
+      }
+  }
