--- a/index.css
+++ b/index.css
@@ -31,14 +31,31 @@ h1, h2, h3, h4, h5, h6, p {
   .navbar a:hover, .navbar a:focus {
     background-color: rgb(245, 130, 195);
   }
-  @media (max-width: 1100px) {
+  .contentbar{
+    flex-flow:row wrap;
+      max-width: 90%;
+      padding-bottom: 100%;
+      display: flex;
+      flex-flow: column-reverse wrap;
+      align-content: center;
+      flex-shrink: 1;
+  }
+  .contentbar>article{
+    background-color: rgb(206, 147, 75);
+    border: 2px transparent;
+    box-shadow: 2px 2px 2px 1px black;
+    max-width: 85%;
+    margin:0.5rem;
+    padding-left: 3px;
+  }
+  @media (max-width: 1000px) {
     button{
       max-width: 48%;
     }
     .contentbar{
       flex-flow:row-reverse wrap;
         max-width: 90%;
-        padding-bottom: 1rem;
+        padding-bottom: 80%;
         display: flex;
         flex-flow: column-reverse wrap;
         align-content: center;
