--- a/fixlist/style.css
+++ b/fixlist/style.css
@@ -146,6 +146,9 @@ div>object{
   min-height: 500px;
   max-height: 600px;
 }
+#modal9, #modal8, #modal7{
+  display:none;
+}
 @media (max-width: 1000px) {
   .button>subtitle{
     display:none;
