--- a/index.css
+++ b/index.css
@@ -1,14 +1,23 @@
 body{
-    margin:0.5rem;
-    background-color: antiquewhite;
+    margin:0.7rem;
+    background-color: rgb(219, 182, 134);
 }
-h1, h2, h3, h4, h5, h6, p {
+p, li{
+  font-size:medium;
+}
+h1, h2, h3, h4, h5, h6, p, li {
     font-family: 'Ubuntu Mono', sans-serif;
       color: #000;
     margin-left: 0.4%;
     }
+  #about h3, #about h2{
+display:inline;
+  }
+  h3, h4{
+color:#3b3b3b;
+  }
 .navbar {
-    background-image: linear-gradient(180deg, #300002 0.001%, #480101);
+    background-image: linear-gradient(180deg, #120001 0.001%, #3b0000);
     overflow: hidden;
     position: fixed;
     top: 0%;
@@ -26,27 +35,26 @@ h1, h2, h3, h4, h5, h6, p {
     display: inline;
   }
   .current-link {
-    background-color: rgb(203, 104, 191);
+    background-color: rgb(87, 5, 72);
   }
   .navbar a:hover, .navbar a:focus {
-    background-color: rgb(245, 130, 195);
+    background-color: rgb(141, 0, 80);
   }
   .contentbar{
     flex-flow:row wrap;
       max-width: 90%;
       padding-bottom: 100%;
       display: flex;
-      flex-flow: column-reverse wrap;
       align-content: center;
       flex-shrink: 1;
   }
-  .contentbar>article{
-    background-color: rgb(206, 147, 75);
+  .contentbar>article, #about{
+    background-color: rgb(206, 123, 75);
     border: 2px transparent;
     box-shadow: 2px 2px 2px 1px black;
     max-width: 85%;
-    margin:0.5rem;
-    padding-left: 3px;
+    margin:1rem;
+    padding: 0rem 1rem 1rem 1rem;
   }
   @media (max-width: 1000px) {
     button{
