--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
+main{
+    margin:1rem;
+}
 body{
-    margin:0.7rem;
-    background-color: rgb(219, 182, 134);
+  margin:0rem;
+  background-color:#f2f2f2;
+  overflow: hidden;
 }
 p, li{
   font-size:medium;
@@ -24,6 +28,7 @@ color:#3b3b3b;
     left: 0%;
     margin-bottom: 0.5rem;
     width: 100%;
+    z-index: 3;
   }
   .navbar a {
     font-family: 'Ubuntu Mono';
@@ -42,19 +47,40 @@ color:#3b3b3b;
   }
   .contentbar{
     flex-flow:row wrap;
-      max-width: 90%;
+      max-width: 95%;
       padding-bottom: 100%;
       display: flex;
       align-content: center;
       flex-shrink: 1;
   }
   .contentbar>article, #about{
-    background-color: rgb(206, 123, 75);
     border: 2px transparent;
-    box-shadow: 2px 2px 2px 1px black;
-    max-width: 85%;
+    /*box-shadow: 2px 2px 2px 1px black;*/
+    max-width: 100%;
     margin:1rem;
     padding: 0rem 1rem 1rem 1rem;
+    position:relative;
+    left:-2%;
+      animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
+  }
+  footer{
+    position: absolute;
+    bottom:0%;
+    width:100%;
+    background-image: linear-gradient(180deg, #120001 0.001%, #3b0000);
+  }
+  footer p, footer a{
+    color:#fff;
+  }
+  @keyframes fadearticle{
+    from{
+      left:-2%;
+      color:#f2f2f2;
+    }
+    to{
+      left:0%;
+      color:#000;
+    }
   }
   @media (max-width: 1000px) {
     button{
