--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 main{
     margin:1rem;
+    min-height:100vh;
 }
 body{
   margin:0rem;
   background-color:#f2f2f2;
-  overflow: hidden;
+  min-height: 100%;
 }
 p, li{
   font-size:medium;
@@ -61,16 +62,18 @@ color:#3b3b3b;
     /*box-shadow: 2px 2px 2px 1px black;*/
     max-width: 100%;
     margin:1rem;
-    padding: 0rem 1rem 1rem 1rem;
+    padding: 0rem 0.7rem 0.7rem 0.7rem;
     position:relative;
     left:-2%;
       animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
   }
   footer{
-    position: absolute;
-    bottom:0%;
+    position:fixed;
+    bottom:0;
     width:100%;
+    height:2.5rem;
     background-image: linear-gradient(180deg, #120001 0.001%, #3b0000);
+    z-index: 3;
   }
   footer p, footer a{
     color:#fff;
@@ -101,5 +104,19 @@ color:#3b3b3b;
     .advert{
       max-width:85%;
       margin: 0.5rem;
+      }
+      .contentbar>article, #about{
+        left:-5%;
+        animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
+      }
+      @keyframes fadearticle{
+        from{
+          left:-5%;
+          color:#f2f2f2;
+        }
+        to{
+          left:0%;
+          color:#000;
+        }
       }
   }
