--- a/index.css
+++ b/index.css
@@ -15,12 +15,22 @@ p, li{
 }
 hr{
   border:2px solid #3b0000;
+  border-radius: 2px;
+  margin:2px;
 }
-h1, h2, h3, h4, h5, h6, p, li {
+h1, h2, h3, h4, h5, h6, p {
     font-family: 'Ubuntu Mono', sans-serif;
       color: #000;
     margin-left: 0.4%;
-    z-index: 2;
+    }
+    li{
+      font-family: 'Ubuntu Mono', sans-serif;
+      background-color: #3b0000;
+      color:#f2f2f2;
+      padding:12px;
+      margin: 8px;
+      border-radius: 6px;
+      border: 1px solid black;
     }
   #about h3, #about h2{
 display:inline;
@@ -60,13 +70,14 @@ color:#3b3b3b;
       display: flex;
       align-content: center;
       flex-shrink: 1;
+      justify-content: space-between;
   }
   .contentbar>article, #about{
     border: 2px transparent;
     /*box-shadow: 2px 2px 2px 1px black;*/
     max-width: 100%;
     margin:1rem;
-    padding: 0rem 0.7rem 0.7rem 0.7rem;
+    padding: 0rem 1rem 1rem 1rem;
     position:relative;
     left:-2%;
       animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
@@ -85,11 +96,9 @@ color:#3b3b3b;
   @keyframes fadearticle{
     from{
       left:-2%;
-      color:#f2f2f2;
     }
     to{
       left:0%;
-      color:#000;
     }
   }
   /*.javascript::after{
@@ -120,10 +129,6 @@ color:#3b3b3b;
         align-content: center;
         flex-shrink: 1;
     }
-    .advert{
-      max-width:85%;
-      margin: 0.5rem;
-      }
       .contentbar>article, #about{
         left:-5%;
         animation: fadearticle 0.7s ease-in-out 0.25s 1 forwards;
