--- a/index.css
+++ b/index.css
@@ -32,6 +32,12 @@ h1, h2, h3, h4, h5, h6, p {
       border-radius: 6px;
       border: 1px solid black;
     }
+    /*#javascript::after{
+        content:url(./images/javascript-js-seeklogo.com.svg);
+        width:16px;
+        display:inline;
+        vertical-align: middle;
+    }*/
   #about h3, #about h2{
 display:inline;
   }
@@ -101,18 +107,6 @@ color:#3b3b3b;
       left:0%;
     }
   }
-  /*.javascript::after{
-    content:url(./images/JavaScript_Logo.png);
-    display: inline-block;
-    width:16px;
-    height:16px;
-  }
-  #html::after{
-    content:url(./images/HTML5_badge.png);
-  }
-  #css3::after{
-    content:url(./images/logo-css-3.png);
-  } */
   @media (max-width: 1000px) {
     body{
       overflow:scroll;
