--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ color:#3b3b3b;
     z-index: 3;
   }
   .navbar a{
-    font-family: 'Ubuntu Mono';
+    font-family: 'Ubuntu Mono', sans-serif;
     color: #f2f2f2;
     padding: 0.6%;
     text-decoration: none;
