--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ main{
 body{
   margin:0rem;
   background-color:#f2f2f2;
-  min-height: 100%;
+  min-height: 100vh;
   overflow: hidden;
   z-index: 0;
 }
